<resources>
    <string name="app_name">Sneaker House</string>
    <string name="login">Login\n</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_text">Who we are.</string>
    <string name="second_fragment_text">Gallery feature in progress</string>
    <string name="name_hint">Name</string>
</resources>